optimized telegram api usage